Map integration with Flutter

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
 
   <title>banat_spaces</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQw6oSnGs-5qiZEPeUNX4sSFSHFGxJoo8"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
